[package]
name = "zero_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zero_blog"
path = "src/bin/app_dev.rs"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
actix-web = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.7.0"
serde_yaml = { version = "0.9.27" }
once_cell = "1.8.0"
rbatis = { version = "4.5.7" }
log = "0.4"
log4rs = "1.0"
mime = "0.3.17"
markdown = "1.0.0-alpha.16"
rand = "0.8"                                                      #随机数
rbdc-mysql = { version = "4.5" }
rbs = { version = "4.5" }
redis = { version = "0.25.3", features = ["tokio-comp", "json"] } #redis 异步IO
actix-jwt-session = "1.0.5"
