[package]
name = "zero_blog"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
actix-web = "4.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
#lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
#actix-cors = "0.7.0"
serde_yaml = { version = "0.9.27" }
#once_cell = "1.19.0"
rbatis = { version = "4.5.33" }
log = "0.4"
log4rs = "1.0"
mime = "0.3.17"
rand = "0.8"                                                      #随机数
rbdc-mysql = { version = "4.5" }
rbs = { version = "4.5.18" }
redis = { version = "0.25.3", features = ["tokio-comp", "json"] } #redis 异步IO
deadpool-redis = { version = "0.14.0", features = ["serde","rt_tokio_1"] }
actix-jwt-session = "1.0.5"
regex = "1.11.1"
comrak = "0.26.0"
slug = "0.1.5"
